// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateEntityDDL (MySQL) > check constraints > check constraints appear inside CREATE TABLE body for TestChecked 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_iT-FyLzW-Ty\` ON \`TestChecked\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestChecked\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`age\` INT NOT NULL,
  \`score\` DOUBLE NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`chk_f6l8XZYrtK2\` CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT \`age_positive\` CHECK (age >= 0)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > indexes > emits indexes for TestIndexed 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_name\` ON \`TestIndexed\` (\`name\`(191) ASC);",
    "CREATE INDEX \`idx_0p2kye90VV7\` ON \`TestIndexed\` (\`email\`(191) ASC, \`name\`(191) ASC);",
    "CREATE INDEX \`idx_-8kqES9p2gF\` ON \`TestIndexed\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestIndexed\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`),
  UNIQUE KEY \`unique_email\` (\`email\`(191))
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > many-to-many join tables > emits join table DDL for TestCourse (owning side) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_z58Ij1Xi9Mi\` ON \`test_course_x_test_student\` (\`testStudentId\`);",
    "CREATE INDEX \`idx_8sshwl9KWJG\` ON \`TestCourse\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestCourse\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
    "CREATE TABLE IF NOT EXISTS \`test_course_x_test_student\` (
  \`testCourseId\` CHAR(36) NOT NULL,
  \`testStudentId\` CHAR(36) NOT NULL,
  CONSTRAINT \`fk_u6dSdkSK-5Z\` FOREIGN KEY (\`testCourseId\`) REFERENCES \`TestCourse\` (\`id\`) ON DELETE CASCADE ON UPDATE CASCADE,
  CONSTRAINT \`fk_XPf387lxnDA\` FOREIGN KEY (\`testStudentId\`) REFERENCES \`TestStudent\` (\`id\`) ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY (\`testCourseId\`, \`testStudentId\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > relation entities (full DDL) > generates full DDL for TestArticle (ManyToOne, owning) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_WtsgpsvT-zV\` ON \`TestArticle\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestArticle\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`title\` TEXT NOT NULL,
  \`authorId\` CHAR(36) NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_k8iBfroD0WS\` FOREIGN KEY (\`authorId\`) REFERENCES \`TestAuthor\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > relation entities (full DDL) > generates full DDL for TestAuthor (OneToMany, inverse) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_aYybfGKVvb4\` ON \`TestAuthor\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestAuthor\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > relation entities (full DDL) > generates full DDL for TestProfile (inverse OneToOne) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_Jwbf8mzOsJ-\` ON \`TestProfile\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestProfile\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`bio\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > relation entities (full DDL) > generates full DDL for TestUserWithProfile (owning OneToOne) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_F699ggiNlTN\` ON \`TestUserWithProfile\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestUserWithProfile\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`profileId\` CHAR(36),
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_1vUEfw_liWK\` FOREIGN KEY (\`profileId\`) REFERENCES \`TestProfile\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > simple entities > generates full DDL for TestScopedEntity 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_50yeYHPVnt0\` ON \`TestScopedEntity\` (\`id\` ASC, \`scope\`(191) ASC);",
    "CREATE INDEX \`idx_yiwk8HzBYqg\` ON \`TestScopedEntity\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestScopedEntity\` (
  \`id\` CHAR(36) NOT NULL,
  \`scope\` TEXT NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`label\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > simple entities > generates full DDL for TestSoftDelete 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_3xOgrWBqPK-\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC);",
    "CREATE INDEX \`idx_LoS0nmZre_e\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC, \`expiresAt\` ASC);",
    "CREATE INDEX \`idx_zSVCOXEnTUO\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC, \`version\` ASC);",
    "CREATE INDEX \`idx_z4gm6gnQd0d\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC, \`expiresAt\` ASC, \`version\` ASC);",
    "CREATE INDEX \`idx_e9Fpqrz7FTn\` ON \`TestSoftDelete\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestSoftDelete\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`deletedAt\` DATETIME(3),
  \`expiresAt\` DATETIME(3),
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > simple entities > generates full DDL for TestUser 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_bt1of5AP7El\` ON \`TestUser\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestUser\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT,
  \`age\` INT DEFAULT 0 NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) > simple entities > generates full DDL for TestVersionKeyed (composite PK) 1`] = `
{
  "indexes": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestVersionKeyed\` (
  \`id\` CHAR(36) NOT NULL,
  \`versionId\` CHAR(36) NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`, \`versionId\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) check constraints check constraints appear inside CREATE TABLE body for TestChecked 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_iT-FyLzW-Ty\` ON \`TestChecked\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestChecked\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`age\` INT NOT NULL,
  \`score\` DOUBLE NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`chk_f6l8XZYrtK2\` CHECK (score BETWEEN 0 AND 100),
  CONSTRAINT \`age_positive\` CHECK (age >= 0)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) indexes emits indexes for TestIndexed 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_name\` ON \`TestIndexed\` (\`name\`(191) ASC);",
    "CREATE INDEX \`idx_0p2kye90VV7\` ON \`TestIndexed\` (\`email\`(191) ASC, \`name\`(191) ASC);",
    "CREATE INDEX \`idx_-8kqES9p2gF\` ON \`TestIndexed\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestIndexed\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`),
  UNIQUE KEY \`unique_email\` (\`email\`(191))
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) many-to-many join tables emits join table DDL for TestCourse (owning side) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_z58Ij1Xi9Mi\` ON \`test_course_x_test_student\` (\`testStudentId\`);",
    "CREATE INDEX \`idx_8sshwl9KWJG\` ON \`TestCourse\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestCourse\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
    "CREATE TABLE IF NOT EXISTS \`test_course_x_test_student\` (
  \`testCourseId\` CHAR(36) NOT NULL,
  \`testStudentId\` CHAR(36) NOT NULL,
  CONSTRAINT \`fk_u6dSdkSK-5Z\` FOREIGN KEY (\`testCourseId\`) REFERENCES \`TestCourse\` (\`id\`) ON DELETE CASCADE ON UPDATE CASCADE,
  CONSTRAINT \`fk_XPf387lxnDA\` FOREIGN KEY (\`testStudentId\`) REFERENCES \`TestStudent\` (\`id\`) ON DELETE CASCADE ON UPDATE CASCADE,
  PRIMARY KEY (\`testCourseId\`, \`testStudentId\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) relation entities (full DDL) generates full DDL for TestArticle (ManyToOne, owning) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_WtsgpsvT-zV\` ON \`TestArticle\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestArticle\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`title\` TEXT NOT NULL,
  \`authorId\` CHAR(36) NOT NULL,
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_k8iBfroD0WS\` FOREIGN KEY (\`authorId\`) REFERENCES \`TestAuthor\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) relation entities (full DDL) generates full DDL for TestAuthor (OneToMany, inverse) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_aYybfGKVvb4\` ON \`TestAuthor\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestAuthor\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) relation entities (full DDL) generates full DDL for TestProfile (inverse OneToOne) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_Jwbf8mzOsJ-\` ON \`TestProfile\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestProfile\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`bio\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) relation entities (full DDL) generates full DDL for TestUserWithProfile (owning OneToOne) 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_F699ggiNlTN\` ON \`TestUserWithProfile\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestUserWithProfile\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`profileId\` CHAR(36),
  PRIMARY KEY (\`id\`),
  CONSTRAINT \`fk_1vUEfw_liWK\` FOREIGN KEY (\`profileId\`) REFERENCES \`TestProfile\` (\`id\`) ON DELETE NO ACTION ON UPDATE NO ACTION
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) simple entities generates full DDL for TestScopedEntity 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_50yeYHPVnt0\` ON \`TestScopedEntity\` (\`id\` ASC, \`scope\`(191) ASC);",
    "CREATE INDEX \`idx_yiwk8HzBYqg\` ON \`TestScopedEntity\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestScopedEntity\` (
  \`id\` CHAR(36) NOT NULL,
  \`scope\` TEXT NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`label\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) simple entities generates full DDL for TestSoftDelete 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_3xOgrWBqPK-\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC);",
    "CREATE INDEX \`idx_LoS0nmZre_e\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC, \`expiresAt\` ASC);",
    "CREATE INDEX \`idx_zSVCOXEnTUO\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC, \`version\` ASC);",
    "CREATE INDEX \`idx_z4gm6gnQd0d\` ON \`TestSoftDelete\` (\`id\` ASC, \`deletedAt\` ASC, \`expiresAt\` ASC, \`version\` ASC);",
    "CREATE INDEX \`idx_e9Fpqrz7FTn\` ON \`TestSoftDelete\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestSoftDelete\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`deletedAt\` DATETIME(3),
  \`expiresAt\` DATETIME(3),
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) simple entities generates full DDL for TestUser 1`] = `
{
  "indexes": [
    "CREATE INDEX \`idx_bt1of5AP7El\` ON \`TestUser\` (\`id\` ASC, \`version\` ASC);",
  ],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestUser\` (
  \`id\` CHAR(36) NOT NULL,
  \`version\` INT NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  \`email\` TEXT,
  \`age\` INT DEFAULT 0 NOT NULL,
  PRIMARY KEY (\`id\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;

exports[`generateEntityDDL (MySQL) simple entities generates full DDL for TestVersionKeyed (composite PK) 1`] = `
{
  "indexes": [],
  "tables": [
    "CREATE TABLE IF NOT EXISTS \`TestVersionKeyed\` (
  \`id\` CHAR(36) NOT NULL,
  \`versionId\` CHAR(36) NOT NULL,
  \`createdAt\` DATETIME(3) NOT NULL,
  \`updatedAt\` DATETIME(3) NOT NULL,
  \`name\` TEXT NOT NULL,
  PRIMARY KEY (\`id\`, \`versionId\`)
) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_unicode_ci;",
  ],
  "triggers": [],
}
`;
